# claude-code-tracer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  improvement_plan.md  phase3_details.md  phase4_details.md  phase5_details.md
backend/: LICENSE  README.md  pyproject.toml
backend/src/claude_code_tracer/: __init__.py  cli.py  main.py
backend/src/claude_code_tracer/models/: __init__.py  entries.py  responses.py
backend/src/claude_code_tracer/routers/: __init__.py  metrics.py  sessions.py  subagents.py
backend/src/claude_code_tracer/services/: __init__.py  async_io.py  cache.py  database.py  index.py  log_parser.py  metrics.py  queries.py
backend/src/claude_code_tracer/static/: .gitkeep
backend/src/claude_code_tracer/utils/: __init__.py  datetime.py
backend/tests/: __init__.py  conftest.py  test_database.py  test_log_parser.py  test_main.py  test_performance_improvements.py  test_phase3_features.py  test_phase4_features.py  test_routers.py
docs/: claude-code-log-and-folder-structure.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: MessageDetailModal.tsx
frontend/src/components/charts/: CostChart.tsx  ModelUsageChart.tsx  TokenUsageChart.tsx  ToolUsageChart.tsx
frontend/src/components/common/: Badge.tsx  EmptyState.tsx  ErrorDisplay.tsx  Layout.tsx  LoadingSpinner.tsx  Pagination.tsx  StatsCard.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/hooks/: useApi.ts  useTheme.ts
frontend/src/pages/: Overview.tsx  ProjectDashboard.tsx  SessionDetail.tsx  SubagentDetail.tsx
frontend/src/types/: index.ts
