[project]
name = "claude-code-tracer"
version = "0.1.4"
description = "Analytics dashboard for Claude Code sessions"
readme = "README.md"
license = "MIT"
authors = [{ name = "Thein Oo" }]
requires-python = ">=3.11"
keywords = ["claude", "anthropic", "analytics", "dashboard", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "duckdb>=1.1.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "orjson>=3.11.5",
]

[project.urls]
Homepage = "https://github.com/thoo/claude-code-tracer"
Repository = "https://github.com/thoo/claude-code-tracer"
Issues = "https://github.com/thoo/claude-code-tracer/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
cctracer = "claude_code_tracer.cli:main"
claude-code-tracer = "claude_code_tracer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code_tracer"]

[tool.hatch.build.targets.sdist]
include = ["src/claude_code_tracer", "LICENSE", "README.md"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
